syntax = "proto3";
package frontend_service;
import "google/protobuf/any.proto";

service FrontEnd {
  rpc GetFrontEnd (FrontEndRequest) returns (FrontEndReply) {}
}

message FrontEndRequest {
   string props = 1;
}

message FrontEndReply {
  string dom = 1;
}
